--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,6 @@
+/* html {
+  scroll-behavior: smooth;
+} */
 
 h2 {
   font-family: 'Montserrat', sans-serif;
@@ -48,8 +51,8 @@ color: #184d47;
 }
 .interests-pic{
 float:right;
-margin-right: 70px;
-border-radius: 30%;
+margin-left: 70px;
+border-radius: 20%;
 width:180px;
 height:180px;
 }
@@ -75,14 +78,14 @@ margin-bottom: 30px ;
 
 .skill-pic{
 margin-right: 70px;
-border-radius: 30%;
+border-radius: 20%;
 width:180px;
 height:180px;
 float: left;
 }
 .skill-row{
 text-align: left;
-margin: 100px auto;
+margin: 100px auto 200px;
 width: 50%;
 line-height: 2;
 }
